# besieve

./: .gitignore  README.md  pyproject.toml
examples/: becky.json.sample
src/besieve/: __init__.py  becky2sieve.py  sieve2becky.py  sync_rules.py
tests/: test_conversion.py
tests/data/: dummy.sieve  dummy_IFilter.def  dummy_IFilter_complex.def  dummy_complex.sieve
