[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "besieve"
version = "1.0.0"
description = "Becky! <-> Sieve ルール変換ツール"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "mimidesunya" }
]
keywords = ["becky", "sieve", "email", "filter", "conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email :: Filters",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
becky2sieve = "besieve.becky2sieve:main"
sieve2becky = "besieve.sieve2becky:main"
sync-rules = "besieve.sync_rules:main"

[project.urls]
Homepage = "https://github.com/mimidesunya/besieve"
Repository = "https://github.com/mimidesunya/besieve"

[tool.hatch.build.targets.wheel]
packages = ["src/besieve"]
